Add VS starterkit files

--- a/iCAN.Web/Views/Partials/Components/Downloads.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Downloads.cshtml
@@ -1,5 +1,5 @@
-@using TGDH.Core.Models;
-@using TGDH.Core.ExtensionMethods;
+@using iCAN.Core.Models;
+@using iCAN.Core.ExtensionMethods;
 @inherits UmbracoViewPage<DownloadsViewModel>
 @{
     if (Model.Media == null)
