--- a/iCAN.Web/Views/Partials/Components/FooterNavigation.cshtml
+++ b/iCAN.Web/Views/Partials/Components/FooterNavigation.cshtml
@@ -1,4 +1,4 @@
-@using TGDH;
+@using iCAN;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var navigationLinks = TGDH.Settings<IEnumerable<IPublishedContent>>("footerNavigation");
