--- a/iCAN.Web/Views/Partials/Components/SocialChannels.cshtml
+++ b/iCAN.Web/Views/Partials/Components/SocialChannels.cshtml
@@ -1,4 +1,4 @@
-@using TGDH.Core.Models;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<SocialChannelsViewModel>
 @{
     if( Model.SocialChannels == null ) {
