--- a/iCAN.Web/Views/Partials/Meta/Analytics.cshtml
+++ b/iCAN.Web/Views/Partials/Meta/Analytics.cshtml
@@ -1,4 +1,4 @@
-@using TGDH;
+@using iCAN;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var trackingId = TGDH.Settings<string>("trackingId");
