--- a/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
@@ -1,4 +1,4 @@
-@using TGDH.Core.Models;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var pageComponents = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("pageComponents");
