--- a/iCAN.Web/Views/Partials/Modules/SearchResults.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/SearchResults.cshtml
@@ -1,6 +1,6 @@
-@using TGDH;
-@using TGDH.Core.Models;
-@using TGDH.Core.Utility;
+@using iCAN;
+@using iCAN.Core.Models;
+@using iCAN.Core.Utility;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var query = Request.QueryString["q"];
