--- a/iCAN.Web/Views/Partials/Components/Card.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Card.cshtml
@@ -1,5 +1,5 @@
-@using TGDH;
-@using TGDH.Core.Models;
+@using iCAN;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<CardViewModel>
 @{
     if (Model.Image == null) {
