--- a/iCAN.Web/Views/Partials/Components/Embed.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Embed.cshtml
@@ -1,4 +1,4 @@
-@using TGDH.Core.Models;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<EmbedViewModel>
 @{
     if (string.IsNullOrWhiteSpace(Model.EmbedCode))
