--- a/iCAN.Web/Views/Partials/Components/LinkList.cshtml
+++ b/iCAN.Web/Views/Partials/Components/LinkList.cshtml
@@ -1,4 +1,4 @@
-@using TGDH.Core.Models;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<LinkListViewModel>
 @{
     if( Model.Links == null ) {
