--- a/iCAN.Web/Views/Partials/Components/Tabs.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Tabs.cshtml
@@ -1,4 +1,4 @@
-@using TGDH.Core.Models;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<TabListViewModel>
 @{
     if (Model.Tabs == null || !Model.Tabs.Any())
