--- a/iCAN.Web/Views/Partials/Meta/SEO.cshtml
+++ b/iCAN.Web/Views/Partials/Meta/SEO.cshtml
@@ -1,4 +1,4 @@
-@using TGDH;
+@using iCAN;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var followIndex = Model.GetPropertyValue<bool>("dontFollow") ? "NOFOLLOW, NOINDEX" : "FOLLOW, INDEX";
