--- a/iCAN.Web/Views/Partials/Modules/Header.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/Header.cshtml
@@ -1,5 +1,5 @@
-@using TGDH;
-@using TGDH.Core.Models;
+@using iCAN;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var siteName = TGDH.Settings<string>("websiteName");
