--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -30,7 +30,6 @@
 		'objects/wrap',
 		'objects/section',
 		'objects/columns',
-		'objects/grid',
 		'objects/table',
 		'objects/forms',
 		'objects/aspect',
@@ -45,8 +44,8 @@
 @import 'components/header',
 		'components/nav',
 		'components/buttons',
-		'components/meta-data',
 		'components/quote',
+		'components/cover',
 		'components/footer',
 		'components/caption',
 //		'components/accordion',
@@ -55,7 +54,7 @@
 		'components/carousel',
 		'components/breadcrumb',
 //		'components/map',
-//		'components/social',
+		'components/social',
 //		'components/tile',
 //		'components/pagination',
 		'components/alert',
