--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -287,10 +287,10 @@ small,
     font-size: 1.3617021277rem; } }
 
 ::-moz-selection {
-  background: #cefaff; }
+  background: #d892cd; }
 
 ::selection {
-  background: #cefaff; }
+  background: #d892cd; }
 
 hr {
   height: 1px;
@@ -467,10 +467,10 @@ figcaption {
 
 =========================================================== */
 a {
-  color: #00b7ce;
+  color: #4f1c47;
   transition: color 0.3s ease; }
   a:hover, a:focus {
-    color: #ed1165; }
+    color: #ff9933; }
 
 /* ===========================================================
 
@@ -530,7 +530,7 @@ textarea {
   input:focus,
   select:focus,
   textarea:focus {
-    border-color: #00b7ce; }
+    border-color: #4f1c47; }
   .is-valid input, .is-valid
   select, .is-valid
   textarea {
@@ -542,7 +542,7 @@ textarea {
   .is-disabled input, .is-disabled
   select, .is-disabled
   textarea {
-    background: #f7f7f7;
+    background: #f7f5f2;
     cursor: not-allowed; }
 
 textarea {
@@ -694,52 +694,6 @@ html {
 
 /* ===========================================================
 
-	# Generic grid
-
-=========================================================== */
-@media only screen and (max-width: 599px) {
-  .o-grid__item {
-    *zoom: 1;
-    float: left;
-    clear: none;
-    text-align: inherit;
-    width: 48.5%;
-    margin-left: 0%;
-    margin-right: 3%; }
-    .o-grid__item:before, .o-grid__item:after {
-      content: '';
-      display: table; }
-    .o-grid__item:after {
-      clear: both; }
-    .o-grid__item:nth-child(2n) {
-      margin-right: 0%;
-      float: right; }
-    .o-grid__item:nth-child(2n + 1) {
-      clear: both; } }
-
-@media only screen and (min-width: 600px) {
-  .o-grid--three .o-grid__item {
-    *zoom: 1;
-    float: left;
-    clear: none;
-    text-align: inherit;
-    width: 31.3333333333%;
-    margin-left: 0%;
-    margin-right: 3%;
-    margin-bottom: 2%; }
-    .o-grid--three .o-grid__item:before, .o-grid--three .o-grid__item:after {
-      content: '';
-      display: table; }
-    .o-grid--three .o-grid__item:after {
-      clear: both; }
-    .o-grid--three .o-grid__item:nth-child(3n) {
-      margin-right: 0%;
-      float: right; }
-    .o-grid--three .o-grid__item:nth-child(3n + 1) {
-      clear: both; } }
-
-/* ===========================================================
-
   # Tables
 
 =========================================================== */
@@ -888,8 +842,8 @@ html {
     .enhance .o-radio .o-checkbox__input:checked + .o-radio__label:before,
     .enhance .o-radio .o-radio__input:checked + .o-checkbox__label:before,
     .enhance .o-radio .o-radio__input:checked + .o-radio__label:before {
-      background-color: #00b7ce;
-      border-color: #008a9b; }
+      background-color: #4f1c47;
+      border-color: #290f25; }
   .enhance .o-checkbox .o-checkbox__label:before,
   .enhance .o-radio .o-checkbox__label:before {
     border-radius: 0.3rem; }
@@ -905,7 +859,7 @@ html {
 
 .enhance .is-disabled .o-checkbox__label:before,
 .enhance .is-disabled .o-radio__label:before {
-  background-color: #f7f7f7; }
+  background-color: #f7f5f2; }
 
 .o-input + .c-button,
 .o-select + .c-button,
@@ -930,7 +884,7 @@ html {
   .o-aspect--21-9:before {
     content: "";
     display: block;
-    background-color: #f7f7f7; }
+    background-color: #f7f5f2; }
   .o-aspect--1-1 img,
   .o-aspect--4-3 img,
   .o-aspect--3-2 img,
@@ -994,7 +948,7 @@ img {
 
 .o-media--video {
   position: relative;
-  background-color: #f7f7f7; }
+  background-color: #f7f5f2; }
   .o-media--video:before {
     content: '';
     display: block;
@@ -1439,14 +1393,14 @@ img.mfp-img {
   color: #FFFFFF;
   position: absolute;
   font-weight: 700;
-  background-color: #00b7ce;
+  background-color: #4f1c47;
   top: 0;
   right: 0;
   padding: 0.5rem 3rem;
   transition: color 0.3s ease, background 0.3s ease; }
   .mfp-close:hover, .mfp-close:focus {
     color: #FFFFFF;
-    background-color: #ed1165; }
+    background-color: #ff9933; }
 
 @media only screen and (min-width: 800px) {
   .white-popup {
@@ -1566,7 +1520,7 @@ img.mfp-img {
 
 =========================================================== */
 .c-header {
-  background-color: #f7f7f7;
+  background-color: #f7f5f2;
   position: relative;
   z-index: 10;
   transition: background 0.3s ease, border-color 0.3s ease; }
@@ -1585,7 +1539,7 @@ img.mfp-img {
 
 @media only screen and (max-width: 999px) {
   .enhance .c-header__toggle-menu-button {
-    color: #00b7ce;
+    color: #4f1c47;
     font-size: 2.4rem;
     display: block;
     float: right;
@@ -1594,13 +1548,13 @@ img.mfp-img {
     .enhance .c-header__toggle-menu-button i {
       vertical-align: middle; }
     .enhance .c-header__toggle-menu-button:hover, .enhance .c-header__toggle-menu-button:focus {
-      color: #ed1165; }
+      color: #ff9933; }
   .enhance .c-header__logo-link {
     position: relative; }
   .enhance.nav-main-open .c-header__toggle-menu-button {
     color: #FFFFFF; }
     .enhance.nav-main-open .c-header__toggle-menu-button:hover, .enhance.nav-main-open .c-header__toggle-menu-button:focus {
-      color: #00b7ce; } }
+      color: #4f1c47; } }
 
 @media only screen and (min-width: 1000px) {
   .c-header__logo-image {
@@ -1627,9 +1581,9 @@ img.mfp-img {
   display: block;
   transition: color 0.3s ease, background 0.3s ease; }
   .c-nav--main .c-nav__link:hover, .c-nav--main .c-nav__link:focus {
-    color: #ed1165; }
+    color: #ff9933; }
   .c-nav--main .c-nav__link.is-active {
-    color: #00b7ce; }
+    color: #4f1c47; }
 
 .c-nav--main .c-nav__item--parent .c-nav__list-sub {
   display: none; }
@@ -1653,7 +1607,7 @@ img.mfp-img {
     left: 0;
     visibility: hidden;
     opacity: 0;
-    background-color: #00b7ce;
+    background-color: #4f1c47;
     -webkit-transform: translateY(-1rem);
         -ms-transform: translateY(-1rem);
             transform: translateY(-1rem);
@@ -1669,7 +1623,7 @@ img.mfp-img {
     .enhance.nav-main-open .c-header__nav-wrap .c-nav__link {
       color: #FFFFFF; }
       .enhance.nav-main-open .c-header__nav-wrap .c-nav__link.is-active {
-        color: #00b7ce; } }
+        color: #4f1c47; } }
 
 @media only screen and (min-width: 1000px) {
   .c-nav--main {
@@ -1683,13 +1637,13 @@ img.mfp-img {
       padding: 1rem;
       transition: color 0.3s ease; }
       .c-nav--main .c-nav__link.is-active {
-        color: #00b7ce; }
+        color: #4f1c47; }
     .c-nav--main .c-nav__list--parent {
       position: relative; }
     .c-nav--main .c-nav__list--sub {
       min-width: 20rem;
       color: #FFFFFF;
-      background-color: #00b7ce;
+      background-color: #4f1c47;
       position: absolute;
       left: 0;
       opacity: 0;
@@ -1709,12 +1663,12 @@ img.mfp-img {
         padding-top: 1rem; }
         .c-nav--main .c-nav__list--sub .c-nav__link:hover, .c-nav--main .c-nav__list--sub .c-nav__link:focus {
           color: #FFFFFF;
-          background-color: #007382; }
+          background-color: #170814; }
         .c-nav--main .c-nav__list--sub .c-nav__link.is-active {
           color: #FFFFFF;
-          background-color: #ed1165; }
+          background-color: #ff9933; }
           .c-nav--main .c-nav__list--sub .c-nav__link.is-active:hover, .c-nav--main .c-nav__list--sub .c-nav__link.is-active:focus {
-            background-color: #ed1165; }
+            background-color: #ff9933; }
     .c-nav--main .c-nav__item--parent:hover .c-nav__list--sub {
       opacity: 1;
       visibility: visible;
@@ -1746,16 +1700,26 @@ img.mfp-img {
       background: #ccc; }
 
 .c-button--primary {
-  background: #00b7ce;
+  background: #4f1c47;
   color: #FFFFFF; }
   .c-button--primary:hover, .c-button--primary:focus {
     background: #000000; }
 
 .c-button--secondary {
-  background: #ed1165;
+  background: #ff9933;
   color: #FFFFFF; }
   .c-button--secondary:hover, .c-button--secondary:focus {
     background: #000000; }
+
+.c-button--skiplink {
+  color: #FFFFFF;
+  background-color: #4f1c47;
+  position: fixed;
+  left: 100%;
+  top: 1rem;
+  z-index: 21; }
+  .c-button--skiplink:focus {
+    left: 1rem; }
 
 @media only screen and (max-width: 599px) {
   .c-button + .c-button {
@@ -1764,22 +1728,6 @@ img.mfp-img {
 @media only screen and (min-width: 600px) {
   .c-button {
     display: inline-block; } }
-
-/* ===========================================================
-
-	# Meta data
-
-=========================================================== */
-.c-meta-data__item {
-  list-style: none;
-  margin: 0; }
-
-@media only screen and (min-width: 600px) {
-  .c-meta-data__item {
-    display: inline-block;
-    margin: 0; }
-    .c-meta-data__item + .c-meta-data__item {
-      margin-left: 1rem; } }
 
 /* ===========================================================
 
@@ -1803,7 +1751,7 @@ img.mfp-img {
   margin-top: 1.4em; }
 
 .c-quote:before {
-  color: #00b7ce;
+  color: #4f1c47;
   font-size: 6.4rem;
   font-weight: 700;
   font-family: serif;
@@ -1817,11 +1765,129 @@ img.mfp-img {
 
 /* ===========================================================
 
+	# Cover
+
+=========================================================== */
+.c-cover {
+  position: relative;
+  overflow: hidden;
+  background-color: #f7f5f2;
+  /*
+	&::after {
+		content: "";
+		width: 100%;
+		height: 100%;
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 1;
+		opacity: 0.67;
+		background-image: linear-gradient(to right top, #000000, rgba(0,0,0, 0) 56%);
+	}
+	 */ }
+
+.c-cover__inner {
+  z-index: 2;
+  position: absolute;
+  top: 30%;
+  right: 0;
+  left: 0; }
+
+.c-cover__headline {
+  color: #FFFFFF; }
+
+.csstransforms .c-cover__inner {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%); }
+
+.c-cover__image-wrap::before {
+  content: "";
+  width: 100%;
+  height: 28%;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, transparent 100%); }
+
+.c-cover__image-wrap::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.15); }
+
+.c-cover__image {
+  width: 100%;
+  height: 100%; }
+
+.c-cover__wrap,
+.c-cover__image {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+/* ===========================================================
+	# Cover breakpoints
+=========================================================== */
+.c-cover:before {
+  content: '';
+  display: block;
+  height: 0;
+  width: 100%;
+  padding-top: 56.25%; }
+
+@media only screen and (max-width: 599px) {
+  .c-cover::before {
+    padding-top: 133.333333333%; } }
+
+@media only screen and (min-width: 600px) and (max-width: 799px) {
+  .c-cover::before {
+    padding-top: 100%; } }
+
+@media only screen and (min-width: 1000px) {
+  .c-cover__content {
+    max-width: 1000px; }
+  .c-cover__copy {
+    max-width: 52rem; } }
+
+@media only screen and (min-width: 1800px) {
+  .c-cover::before {
+    padding-top: 42.8571428571%; } }
+
+.flexbox .c-cover__content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.flexbox .c-cover__subtitle {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1; }
+
+/* ===========================================================
+
 	# Footer
 
 =========================================================== */
 .c-footer {
-  background-color: #f7f7f7; }
+  background-color: #f7f5f2; }
 
 @media only screen and (min-width: 1000px) {
   .c-footer__inner:before, .c-footer__inner:after {
@@ -1851,7 +1917,7 @@ img.mfp-img {
 
 =========================================================== */
 .c-caption {
-  color: #00b7ce;
+  color: #4f1c47;
   margin-top: 0.35em; }
 
 /* ===========================================================
@@ -1873,7 +1939,7 @@ img.mfp-img {
 
 .c-carousel__nav {
   color: #FFFFFF;
-  background-color: #00b7ce;
+  background-color: #4f1c47;
   padding: 1rem;
   border-radius: 50%;
   position: absolute;
@@ -1884,7 +1950,7 @@ img.mfp-img {
   text-align: center;
   transition: color 0.3s ease, background-color 0.3s ease; }
   .c-carousel__nav:hover, .c-carousel__nav:focus {
-    background-color: #ed1165; }
+    background-color: #ff9933; }
   .c-carousel__nav.slick-disabled:before {
     color: #d9d9d9; }
 
@@ -1925,7 +1991,7 @@ img.mfp-img {
     padding: 0;
     cursor: pointer; }
   .c-carousel__dots button {
-    border: 0.2rem solid #00b7ce;
+    border: 0.2rem solid #4f1c47;
     background: transparent;
     display: block;
     height: 2.1rem;
@@ -1940,9 +2006,9 @@ img.mfp-img {
     transition: background-color 0.3s ease, border-color 0.3s ease; }
     .c-carousel__dots button:hover, .c-carousel__dots button:focus {
       outline: none;
-      background-color: #00b7ce; }
+      background-color: #4f1c47; }
   .c-carousel__dots .slick-active button {
-    background-color: #00b7ce; }
+    background-color: #4f1c47; }
 
 .c-carousel--invert .c-carousel__dots button {
   border-color: #FFFFFF; }
@@ -2004,6 +2070,84 @@ img.mfp-img {
 
 /* ===========================================================
 
+	# Social links
+
+=========================================================== */
+.c-social__link {
+  color: #FFFFFF;
+  font-size: 1.6rem;
+  display: inline-block;
+  background-color: #4f1c47;
+  padding: .7rem 1rem;
+  float: left;
+  transition: background 0.3s ease, color 0.3s ease; }
+  .c-social__link i {
+    vertical-align: middle; }
+  .c-social__link:hover, .c-social__link:focus {
+    color: #222222;
+    background-color: #f7f5f2; }
+
+.c-social__link--facebook {
+  background-color: #3b5998; }
+  .c-social__link--facebook:hover, .c-social__link--facebook:focus {
+    color: #3b5998; }
+
+.c-social__link--twitter {
+  background-color: #55acee; }
+  .c-social__link--twitter:hover, .c-social__link--twitter:focus {
+    color: #55acee; }
+
+.c-social__link--google {
+  background-color: #dc4e41; }
+  .c-social__link--google:hover, .c-social__link--google:focus {
+    color: #dc4e41; }
+
+.c-social__link--instagram {
+  background-color: #3f729b; }
+  .c-social__link--instagram:hover, .c-social__link--instagram:focus {
+    color: #3f729b; }
+
+.c-social__link--linkedin {
+  background-color: #0077b5; }
+  .c-social__link--linkedin:hover, .c-social__link--linkedin:focus {
+    color: #0077b5; }
+
+.c-social__link--pinterest {
+  background-color: #bd081c; }
+  .c-social__link--pinterest:hover, .c-social__link--pinterest:focus {
+    color: #bd081c; }
+
+.c-social__link--youtube {
+  background-color: #cd201f; }
+  .c-social__link--youtube:hover, .c-social__link--youtube:focus {
+    color: #cd201f; }
+
+.c-social__link--vimeo {
+  background-color: #1ab7ea; }
+  .c-social__link--vimeo:hover, .c-social__link--vimeo:focus {
+    color: #1ab7ea; }
+
+.c-social__link--flcikr {
+  background-color: #0063dc; }
+  .c-social__link--flcikr:hover, .c-social__link--flcikr:focus {
+    color: #0063dc; }
+
+@media only screen and (max-width: 999px) {
+  .enhance .c-social {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .enhance .c-social__link {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    text-align: center;
+    padding: 2rem; } }
+
+/* ===========================================================
+
 	# Alert
 
 =========================================================== */
@@ -2028,7 +2172,7 @@ img.mfp-img {
   background-color: #f44336; }
 
 .c-alert--info {
-  background-color: #00b7ce; }
+  background-color: #4f1c47; }
 
 /* ===========================================================
 
@@ -2036,7 +2180,7 @@ img.mfp-img {
 
 =========================================================== */
 .no-enhance .c-tabs__nav {
-  border-left: 0.2rem solid #00b7ce;
+  border-left: 0.2rem solid #4f1c47;
   margin-bottom: 1.4em; }
   .no-enhance .c-tabs__nav:before {
     content: "Contents";
@@ -2138,19 +2282,19 @@ img.mfp-img {
 
 .enhance .c-tabs__nav-item .c-tabs__nav-tab {
   color: #FFFFFF;
-  background-color: #00b7ce;
+  background-color: #4f1c47;
   padding: 1.4rem 4rem;
   border-radius: 0.3rem 0.3rem 0 0; }
   .enhance .c-tabs__nav-item .c-tabs__nav-tab:hover, .enhance .c-tabs__nav-item .c-tabs__nav-tab:focus {
-    background-color: #00a0b5; }
+    background-color: #3c1536; }
 
 .enhance .c-tabs__nav-item.is-active .c-tabs__nav-tab {
-  color: #00b7ce;
-  background-color: #f7f7f7; }
+  color: #4f1c47;
+  background-color: #f7f5f2; }
 
 .enhance .c-tabs__page,
 .enhance .c-tabs__content {
-  background-color: #f7f7f7; }
+  background-color: #f7f5f2; }
 
 .enhance .c-tabs__page {
   padding: 1rem; }
@@ -2233,7 +2377,7 @@ img.mfp-img {
   font-weight: 300; }
 
 .u-highlight-text {
-  color: #00b7ce; }
+  color: #4f1c47; }
 
 /* ===========================================================
 
