Fix package url and button style

--- a/_assets/sass/components/buttons.scss
+++ b/_assets/sass/components/buttons.scss
@@ -57,7 +57,7 @@
 
 .c-button--skiplink {
 	color: $white;
-	background-color: $pri;
+	background-color: $sec;
 	position: fixed;
 	left: 100%; // Moves button off screen
 	top: 1rem;
