--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -1713,7 +1713,7 @@ img.mfp-img {
 
 .c-button--skiplink {
   color: #FFFFFF;
-  background-color: #4f1c47;
+  background-color: #ff9933;
   position: fixed;
   left: 100%;
   top: 1rem;
