Initial work on base typography

--- a/_assets/sass/settings/global.scss
+++ b/_assets/sass/settings/global.scss
@@ -49,15 +49,15 @@ $flcikr: 					#0063dc;
 =========================================================== */
 
 $font-family:				"proxima-nova", Helvetica, Arial, Geneva, sans-serif;
-$font-family-sec:			'';
+$font-family-sec:			"proxima-nova-extra-condensed";
 $font-size-small:			1.6rem;
 $font-size-large:			1.6rem;
 $line-height:				1.4em;
-$type-scale-small:			1.125;
-$type-scale-medium:			1.150;
-$type-scale-large:			1.175;
+$type-scale-small:			1.175;
+$type-scale-medium:			1.20;
+$type-scale-large:			1.25;
 
-$heading-colour:			$black;
+$heading-colour:			$purple-2;
 $text-colour:				$black;
 $background-colour:			$white;
 $border-colour:				#ccc;
