--- a/_templates/Master.cshtml
+++ b/_templates/Master.cshtml
@@ -14,7 +14,7 @@
         @Html.Partial("~/Views/Partials/Meta/SEO.cshtml")
 		<link rel="stylesheet" href="/assets/css/style.css">
         <script src="/assets/js/head.js"></script>
-        <!--<meta name="theme-color" content="#000000">-->
+		<link rel="stylesheet" href="https://use.typekit.net/mmc8vjo.css">
 		<link rel="shortcut icon" href="/img/favicons/favicon-96x96.png" type="image/png">
 		<link rel="manifest" href="/manifest.json" />
     </head>
