--- a/_assets/sass/objects/media.scss
+++ b/_assets/sass/objects/media.scss
@@ -12,6 +12,10 @@ img {
 .o-media {
 	position: relative;
 
+	& > a {
+		display: block;
+	}
+
 	img {
 		width: 100%;
 		border-radius: $border-radius;
