--- a/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
@@ -1,4 +1,5 @@
 @using iCAN.Core.Models;
+@using RJP.MultiUrlPicker.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     var pageComponents = Model.GetPropertyValue<IEnumerable<IPublishedContent>>("pageComponents");
@@ -39,6 +40,7 @@
                 @Html.Partial("Components/Gallery", gallery)
                 break;
             case "imageObject":
+				var imageLink = item.GetPropertyValue<Link>("link");
                 var image = new ImageViewModel
                 {
                     Image = item.GetPropertyValue<IPublishedContent>("image"),
@@ -46,6 +48,12 @@
                     AspectRatio = aspectRatio,
                     ModifierClass = pageComponentClass
                 };
+
+				if (imageLink != null) {
+					image.Url = imageLink.Url;
+					image.Name = imageLink.Name;
+					image.Target = imageLink.Target;
+				}
 
                 @Html.Partial("Components/Image", image)
                 break;
@@ -111,12 +119,25 @@
                 @Html.Partial("Components/" + item.DocumentTypeAlias, tabList)
 
                 break;
+			case "button":
+				var link = item.GetPropertyValue<Link>("buttonLink");
+				if (link != null) {
+					@Html.Partial("Components/Button", new ButtonViewModel
+					{
+						Url = link.Url,
+						Name = link.Name,
+						Target = link.Target,
+						ModifierClass = pageComponentClass
+					})
+				}
+
+                break;
             default:
                 @NoResult(item)
                 break;
         }
 
-        if (item.HasProperty("alignment"))
+        if (alignment != "Full width")
         {
             @Html.Raw("</div>")
         }
