change page component wrap size

--- a/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/PageComponents.cshtml
@@ -9,7 +9,7 @@
         return;
     }
 
-    const string wrapSize = "medium";
+    const string wrapSize = "small";
     var pageComponentClass = "o-page-component";
 
     foreach (var item in pageComponents)
