--- a/iCAN.Web/Views/TextPage.cshtml
+++ b/iCAN.Web/Views/TextPage.cshtml
@@ -4,7 +4,10 @@
     var headline = Model.GetPropertyValue<string>("headline", Model.Name);
 }
 
-<main class="o-page__inner u-clearfix" role="main">
-	<h1>@headline</h1>
-    @Html.Partial("Modules/PageComponents")
-</main>
+<div class="o-page__inner u-clearfix">
+	@Html.CachedPartial("~/Views/Partials/Components/Breadcrumb.cshtml", Model, 3600, true)
+	<main class="o-section" role="main">
+		<h1 class="o-wrap o-wrap--x-large">@headline</h1>
+		@Html.Partial("Modules/PageComponents")
+	</main>
+</div>
