Increase cover headline size

--- a/iCAN.Web/Views/Partials/Components/Cover.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Cover.cshtml
@@ -12,7 +12,7 @@
 	<div class="c-cover__inner o-wrap o-wrap--x-large">
 		<div class="c-cover__content">
 			@if (!String.IsNullOrWhiteSpace(Model.Headline)) {
-				<h1 class="c-cover__headline u-mega">@Model.Headline</h1>
+				<h1 class="c-cover__headline u-giga">@Model.Headline</h1>
 			}
 			@if(Model.Copy != null) {
 				<div class="c-cover__copy">
