Add colour utility classes

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -63,6 +63,7 @@
 
 @import 'utility/overrides',
 		'utility/hide',
-		'utility/spacers';
+		'utility/spacers',
+		'utility/colours';
 
 @import 'trumps/free-content';
