--- a/iCAN.Web/Views/Partials/Components/SocialChannels.cshtml
+++ b/iCAN.Web/Views/Partials/Components/SocialChannels.cshtml
@@ -6,7 +6,7 @@
 	}
 }
 
-<div class="c-social u-clearfix">
+<div class="c-social u-clearfix @Model.ModifierClass">
 	<h2 class="c-social__headline u-visually-hidden">Social channels: </h2>
     @foreach( IPublishedContent socialChannel in Model.SocialChannels )
     {
