--- a/_assets/sass/components/quote.scss
+++ b/_assets/sass/components/quote.scss
@@ -7,30 +7,28 @@
 .c-quote {
 	position: relative;
 	line-height: 1.3;
-	padding-left: $padding-medium;
-	padding-right: $padding-medium;
 	quotes: "\201C""\201D""\2018""\2019";
 }
 
 .c-quote__copy {
 	display: block;
-	font-size: 2rem;
+	font-family: $font-family-sec;
+	font-size: 2.4rem;
 }
 
 .c-quote__src {
-	text-align: right;
-	font-weight: $bold;
+	color: $pri;
 	margin-top: $line-height;
 }
 
 .c-quote:before{
 	color: $pri;
+	height: 5rem;
 	font-size: 6.4rem;
 	font-weight: 700;
 	font-family: serif;
-	line-height: 0.6em;
-	position: absolute;
-	top: .7rem;
+	display: block;
+	font-family: $font-family-sec;
 }
 
 .c-quote:before {
