--- a/_assets/sass/components/social.scss
+++ b/_assets/sass/components/social.scss
@@ -6,25 +6,25 @@
 
 .c-social__link {
 	color: $white;
-	font-size: 1.6rem;
 	display: inline-block;
-	background-color: $pri;
-	padding: .7rem 1rem;
-	float: left;
 	transition: background $speed $ease,
 				color $speed $ease;
 
-	i {
-		vertical-align: middle;
+	.u-icon {
+		transition: fill $speed $ease;
 	}
 
 	&:hover,
 	&:focus {
-		color: $dark-1;
-		background-color: $light-1;
+
+		.u-icon {
+			fill: $link-colour-hover;
+		}
 	}
 
 }
+
+/*
 .c-social__link--facebook {
 	background-color: $facebook;
 
@@ -105,6 +105,7 @@
 		color: $flcikr;
 	}
 }
+*/
 
 
 @include respond-max( $mq-large ) {
