--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -468,7 +468,7 @@ figcaption {
 
 =========================================================== */
 a {
-  color: #4f1c47;
+  color: #ff9933;
   transition: color 0.3s ease; }
   a:hover, a:focus {
     color: #ff9933; }
@@ -1523,7 +1523,6 @@ img.mfp-img {
 
 =========================================================== */
 .c-header {
-  background-color: #f7f5f2;
   position: relative;
   z-index: 10;
   transition: background 0.3s ease, border-color 0.3s ease; }
@@ -1685,11 +1684,11 @@ img.mfp-img {
 
 =========================================================== */
 .c-button {
-  border-radius: 0.3rem;
+  border-radius: 3rem;
   display: block;
   line-height: 1;
   text-align: center;
-  padding: 1.5rem 2rem;
+  padding: 1.2rem 2rem;
   transition: background 0.3s ease, box-shadow 0.3s ease, color 0.3s ease; }
   .c-button:hover, .c-button:focus {
     color: #FFFFFF; }
@@ -1701,6 +1700,9 @@ img.mfp-img {
     cursor: not-allowed; }
     .c-button.is-disabled:hover, .c-button.is-disabled:focus {
       background: #ccc; }
+  @media only screen and (min-width: 600px) {
+    .c-button {
+      display: inline-block; } }
 
 .c-button--primary {
   background: #4f1c47;
@@ -1740,27 +1742,25 @@ img.mfp-img {
 .c-quote {
   position: relative;
   line-height: 1.3;
-  padding-left: 6rem;
-  padding-right: 6rem;
   quotes: "“" "”" "‘" "’"; }
 
 .c-quote__copy {
   display: block;
-  font-size: 2rem; }
+  font-family: "proxima-nova-extra-condensed";
+  font-size: 2.4rem; }
 
 .c-quote__src {
-  text-align: right;
-  font-weight: 700;
+  color: #4f1c47;
   margin-top: 1.7em; }
 
 .c-quote:before {
   color: #4f1c47;
+  height: 5rem;
   font-size: 6.4rem;
   font-weight: 700;
   font-family: serif;
-  line-height: 0.6em;
-  position: absolute;
-  top: .7rem; }
+  display: block;
+  font-family: "proxima-nova-extra-condensed"; }
 
 .c-quote:before {
   content: "\201C";
@@ -1774,21 +1774,18 @@ img.mfp-img {
 .c-cover {
   position: relative;
   overflow: hidden;
-  background-color: #f7f5f2;
-  /*
-	&::after {
-		content: "";
-		width: 100%;
-		height: 100%;
-		display: block;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		z-index: 1;
-		opacity: 0.67;
-		background-image: linear-gradient(to right top, #000000, rgba(0,0,0, 0) 56%);
-	}
-	 */ }
+  background-color: #f7f5f2; }
+  .c-cover::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    opacity: 0.67;
+    background-image: linear-gradient(to right top, #000000, transparent 56%); }
 
 .c-cover__inner {
   z-index: 2;
@@ -1799,6 +1796,10 @@ img.mfp-img {
 
 .c-cover__headline {
   color: #FFFFFF; }
+
+.c-cover__copy {
+  color: #FFFFFF;
+  font-weight: 700; }
 
 .csstransforms .c-cover__inner {
   top: 50%;
@@ -1861,13 +1862,55 @@ img.mfp-img {
   .c-cover__content {
     max-width: 1000px; }
   .c-cover__copy {
-    max-width: 52rem; } }
+    max-width: 60rem; } }
 
 @media only screen and (min-width: 1800px) {
   .c-cover::before {
     padding-top: 42.8571428571%; } }
 
-.flexbox .c-cover__content {
+/* ===========================================================
+
+	# Card
+
+=========================================================== */
+.c-card {
+  position: relative;
+  background-color: #FFFFFF; }
+
+.c-card__headline {
+  transition: color 0.3s ease; }
+
+.c-card__link {
+  color: #000000;
+  display: block;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1); }
+  .c-card__link:hover, .c-card__link:focus {
+    color: inherit; }
+    .c-card__link:hover .c-card__headline, .c-card__link:focus .c-card__headline {
+      color: #4f1c47; }
+
+.c-card__category {
+  margin-bottom: .7rem; }
+
+.c-card__subtitle {
+  letter-spacing: 2px;
+  font-size: 1.4rem;
+  margin-bottom: .7rem; }
+
+.c-card__content {
+  padding: 3rem; }
+
+.c-card__cta {
+  margin-top: 1.7em; }
+
+.flexbox .c-card {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flexbox .c-card__link {
+  width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1878,11 +1921,52 @@ img.mfp-img {
       -ms-flex-direction: column;
           flex-direction: column; }
 
-.flexbox .c-cover__subtitle {
+.flexbox .c-card__content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+
+.flexbox .c-card__category {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-ordinal-group: 0;
   -webkit-order: -1;
       -ms-flex-order: -1;
           order: -1; }
+
+.flexbox .c-card__copy {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+
+.flexbox .c-card__subtitle {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1; }
+
+.flexbox .c-card__cta {
+  -webkit-align-self: start;
+      -ms-flex-item-align: start;
+              -ms-grid-row-align: start;
+          align-self: start; }
+
+.no-flexbox .c-card__subtitle {
+  display: inline-block;
+  margin-right: 2.4rem; }
 
 /* ===========================================================
 
@@ -1890,14 +1974,41 @@ img.mfp-img {
 
 =========================================================== */
 .c-footer {
-  background-color: #f7f5f2; }
+  color: #FFFFFF;
+  background-color: #4f1c47; }
+  .c-footer h2,
+  .c-footer h3 {
+    color: inherit; }
+  .c-footer svg {
+    fill: #FFFFFF; }
+  .c-footer .c-footer__logo {
+    max-width: 8.5rem;
+    opacity: 0.4; }
+  .c-footer a {
+    color: #ff9933; }
+
+.c-footer__sub {
+  font-size: 1.4rem;
+  background-color: #3a113e;
+  padding: 1.5rem 0; }
+
+.c-footer__social {
+  margin-top: 1.8rem; }
+
+.c-footer__micro {
+  font-size: 1.2rem; }
+  .c-footer__micro a {
+    font-weight: 900; }
+
+.c-footer__tgdh {
+  display: inline-block; }
+  .c-footer__tgdh a {
+    color: #FFFFFF;
+    font-weight: 900; }
 
 @media only screen and (min-width: 1000px) {
-  .c-footer__inner:before, .c-footer__inner:after {
-    content: "";
-    display: table; }
-  .c-footer__inner:after {
-    clear: both; }
+  .c-footer__inner {
+    position: relative; }
   .c-footer__col {
     *zoom: 1;
     float: left;
@@ -1912,7 +2023,23 @@ img.mfp-img {
     .c-footer__col:after {
       clear: both; }
     .c-footer__col:last-child {
-      margin-right: 0%; } }
+      margin-right: 0%; }
+  .c-footer__nav,
+  .c-footer__copyright {
+    display: inline-block; }
+  .c-footer__copyright {
+    margin-right: 2rem; }
+  .flexbox .c-footer__sub .o-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .flexbox .c-footer__tgdh {
+    margin-left: auto; } }
 
 /* ===========================================================
 
@@ -2030,6 +2157,247 @@ img.mfp-img {
   .c-carousel__nav {
     font-size: 4.8rem; } }
 
+.c-carousel--cards .slick-list {
+  overflow: visible; }
+
+.flexbox .c-carousel--cards .slick-track {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flexbox .c-carousel--cards .slick-slide {
+  height: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 1.5rem; }
+  .flexbox .c-carousel--cards .slick-slide > div {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+
+.flexbox .c-carousel--cards .c-carousel__item {
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important; }
+
+@media only screen and (min-width: 800px) {
+  .no-enhance .c-carousel--cards:before, .no-enhance .c-carousel--cards:after {
+    content: "";
+    display: table; }
+  .no-enhance .c-carousel--cards:after {
+    clear: both; }
+  .no-enhance .c-carousel--cards .c-card {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 31.3333333333%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .no-enhance .c-carousel--cards .c-card:before, .no-enhance .c-carousel--cards .c-card:after {
+      content: '';
+      display: table; }
+    .no-enhance .c-carousel--cards .c-card:after {
+      clear: both; }
+    .no-enhance .c-carousel--cards .c-card:nth-child(3n) {
+      margin-right: 0%;
+      float: right; }
+    .no-enhance .c-carousel--cards .c-card:nth-child(3n + 1) {
+      clear: both; } }
+
+@media only screen and (min-width: 1560px) {
+  .c-carouse--large .c-carousel--prev,
+  .c-carouse--large .c-carousel--next,
+  .c-carousel--cards .c-carousel--prev,
+  .c-carousel--cards .c-carousel--next {
+    padding: 2.6rem 2.7rem;
+    box-shadow: 0 0 60px rgba(68, 68, 68, 0.5); }
+  .c-carouse--large .c-carousel--prev,
+  .c-carousel--cards .c-carousel--prev {
+    left: -6rem; }
+  .c-carouse--large .c-carousel--next,
+  .c-carousel--cards .c-carousel--next {
+    right: -6rem; } }
+
+/* ===========================================================
+
+	# Carousel
+
+=========================================================== */
+.js-carousel .c-carousel__item {
+  display: none; }
+
+.js-carousel .c-carousel__item--first {
+  display: block; }
+
+.js-carousel.slick-initialized .c-carousel__item {
+  display: block; }
+
+.c-carousel {
+  position: relative; }
+
+.c-carousel__nav {
+  color: #FFFFFF;
+  background-color: #4f1c47;
+  padding: 1rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  z-index: 2;
+  line-height: 1;
+  font-size: 3.2rem;
+  text-align: center;
+  transition: color 0.3s ease, background-color 0.3s ease; }
+  .c-carousel__nav:hover, .c-carousel__nav:focus {
+    background-color: #ff9933; }
+  .c-carousel__nav.slick-disabled:before {
+    color: #d9d9d9; }
+
+.c-carousel__nav--prev {
+  left: 0;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+
+.c-carousel__nav--next {
+  right: 0;
+  -webkit-transform: translate(50%, -50%);
+      -ms-transform: translate(50%, -50%);
+          transform: translate(50%, -50%); }
+
+.c-carousel--invert .c-carousel__nav {
+  color: #FFFFFF;
+  opacity: .5;
+  transition: opacity 0.3s ease; }
+  .c-carousel--invert .c-carousel__nav:hover, .c-carousel--invert .c-carousel__nav:focus {
+    opacity: 1; }
+
+/* dots */
+.c-carousel__dots {
+  position: relative;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%; }
+  .c-carousel__dots li {
+    position: relative;
+    display: inline-block;
+    width: 2.1rem;
+    height: 2.1rem;
+    margin: 0 .5rem;
+    padding: 0;
+    cursor: pointer; }
+  .c-carousel__dots button {
+    border: 0.2rem solid #4f1c47;
+    background: transparent;
+    display: block;
+    height: 2.1rem;
+    width: 2.1rem;
+    outline: none;
+    line-height: 0;
+    font-size: 0;
+    color: transparent;
+    padding: .5rem;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: background-color 0.3s ease, border-color 0.3s ease; }
+    .c-carousel__dots button:hover, .c-carousel__dots button:focus {
+      outline: none;
+      background-color: #4f1c47; }
+  .c-carousel__dots .slick-active button {
+    background-color: #4f1c47; }
+
+.c-carousel--invert .c-carousel__dots button {
+  border-color: #FFFFFF; }
+
+.c-carousel--invert .c-carousel__dots li.slick-active {
+  background-color: #FFFFFF; }
+
+.c-carousel--invert .c-carousel__dots li:hover, .c-carousel--invert .c-carousel__dots li:focus {
+  background-color: #FFFFFF; }
+
+.c-carousel--images .c-carousel__dots {
+  position: absolute;
+  bottom: 1.7em; }
+
+@media only screen and (min-width: 1000px) {
+  .c-carousel__nav {
+    font-size: 4.8rem; } }
+
+.c-carousel--cards .slick-list {
+  overflow: visible; }
+
+.flexbox .c-carousel--cards .slick-track {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.flexbox .c-carousel--cards .slick-slide {
+  height: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 1.5rem; }
+  .flexbox .c-carousel--cards .slick-slide > div {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+
+.flexbox .c-carousel--cards .c-carousel__item {
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important; }
+
+@media only screen and (min-width: 800px) {
+  .no-enhance .c-carousel--cards:before, .no-enhance .c-carousel--cards:after {
+    content: "";
+    display: table; }
+  .no-enhance .c-carousel--cards:after {
+    clear: both; }
+  .no-enhance .c-carousel--cards .c-card {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 31.3333333333%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .no-enhance .c-carousel--cards .c-card:before, .no-enhance .c-carousel--cards .c-card:after {
+      content: '';
+      display: table; }
+    .no-enhance .c-carousel--cards .c-card:after {
+      clear: both; }
+    .no-enhance .c-carousel--cards .c-card:nth-child(3n) {
+      margin-right: 0%;
+      float: right; }
+    .no-enhance .c-carousel--cards .c-card:nth-child(3n + 1) {
+      clear: both; } }
+
+@media only screen and (min-width: 1560px) {
+  .c-carouse--large .c-carousel--prev,
+  .c-carouse--large .c-carousel--next,
+  .c-carousel--cards .c-carousel--prev,
+  .c-carousel--cards .c-carousel--next {
+    padding: 2.6rem 2.7rem;
+    box-shadow: 0 0 60px rgba(68, 68, 68, 0.5); }
+  .c-carouse--large .c-carousel--prev,
+  .c-carousel--cards .c-carousel--prev {
+    left: -6rem; }
+  .c-carouse--large .c-carousel--next,
+  .c-carousel--cards .c-carousel--next {
+    right: -6rem; } }
+
 /* ===========================================================
 
 	# Breadcrumb
@@ -2079,63 +2447,95 @@ img.mfp-img {
 =========================================================== */
 .c-social__link {
   color: #FFFFFF;
-  font-size: 1.6rem;
   display: inline-block;
-  background-color: #4f1c47;
-  padding: .7rem 1rem;
-  float: left;
   transition: background 0.3s ease, color 0.3s ease; }
-  .c-social__link i {
-    vertical-align: middle; }
-  .c-social__link:hover, .c-social__link:focus {
-    color: #222222;
-    background-color: #f7f5f2; }
+  .c-social__link .u-icon {
+    transition: fill 0.3s ease; }
+  .c-social__link:hover .u-icon, .c-social__link:focus .u-icon {
+    fill: #ff9933; }
 
+/*
 .c-social__link--facebook {
-  background-color: #3b5998; }
-  .c-social__link--facebook:hover, .c-social__link--facebook:focus {
-    color: #3b5998; }
+	background-color: $facebook;
+
+	&:hover,
+	&:focus {
+		color: $facebook;
+	}
+}
 
 .c-social__link--twitter {
-  background-color: #55acee; }
-  .c-social__link--twitter:hover, .c-social__link--twitter:focus {
-    color: #55acee; }
+	background-color: $twitter;
+
+	&:hover,
+	&:focus {
+		color: $twitter;
+	}
+}
 
 .c-social__link--google {
-  background-color: #dc4e41; }
-  .c-social__link--google:hover, .c-social__link--google:focus {
-    color: #dc4e41; }
+	background-color: $google;
+
+	&:hover,
+	&:focus {
+		color: $google;
+	}
+}
 
 .c-social__link--instagram {
-  background-color: #3f729b; }
-  .c-social__link--instagram:hover, .c-social__link--instagram:focus {
-    color: #3f729b; }
+	background-color: $instagram;
+
+	&:hover,
+	&:focus {
+		color: $instagram;
+	}
+}
 
 .c-social__link--linkedin {
-  background-color: #0077b5; }
-  .c-social__link--linkedin:hover, .c-social__link--linkedin:focus {
-    color: #0077b5; }
+	background-color: $linkedin;
+
+	&:hover,
+	&:focus {
+		color: $linkedin;
+	}
+}
 
 .c-social__link--pinterest {
-  background-color: #bd081c; }
-  .c-social__link--pinterest:hover, .c-social__link--pinterest:focus {
-    color: #bd081c; }
+	background-color: $pinterest;
+
+	&:hover,
+	&:focus {
+		color: $pinterest;
+	}
+}
 
 .c-social__link--youtube {
-  background-color: #cd201f; }
-  .c-social__link--youtube:hover, .c-social__link--youtube:focus {
-    color: #cd201f; }
+	background-color: $youtube;
+
+	&:hover,
+	&:focus {
+		color: $youtube;
+	}
+}
 
 .c-social__link--vimeo {
-  background-color: #1ab7ea; }
-  .c-social__link--vimeo:hover, .c-social__link--vimeo:focus {
-    color: #1ab7ea; }
+	background-color: $vimeo;
+
+	&:hover,
+	&:focus {
+		color: $vimeo;
+	}
+}
 
 .c-social__link--flcikr {
-  background-color: #0063dc; }
-  .c-social__link--flcikr:hover, .c-social__link--flcikr:focus {
-    color: #0063dc; }
+	background-color: $flcikr;
 
+	&:hover,
+	&:focus {
+		color: $flcikr;
+	}
+}
+*/
 @media only screen and (max-width: 999px) {
   .enhance .c-social {
     display: -webkit-box;
@@ -2177,6 +2577,15 @@ img.mfp-img {
 
 .c-alert--info {
   background-color: #4f1c47; }
+
+/* ===========================================================
+	# Contact details
+=========================================================== */
+.c-contact-details__list {
+  list-style: none;
+  word-wrap: break-word; }
+  .c-contact-details__list li {
+    margin-left: 0; }
 
 /* ===========================================================
 
@@ -2409,6 +2818,31 @@ img.mfp-img {
     display: none !important; } }
 
 /* ===========================================================
+# Icons
+=========================================================== */
+.u-icon {
+  fill: #ff9933; }
+
+.u-icon--white {
+  fill: #FFFFFF; }
+
+.u-icon--16 {
+  width: 1.6rem;
+  height: 1.6rem; }
+
+.u-icon--24 {
+  width: 2.4rem;
+  height: 2.4rem; }
+
+.u-icon--32 {
+  width: 3.2rem;
+  height: 3.2rem; }
+
+.u-icon--42 {
+  width: 4.2rem;
+  height: 4.2rem; }
+
+/* ===========================================================
 
   # Spacers
 
@@ -2453,5 +2887,29 @@ img.mfp-img {
 @media only screen and (min-width: 800px) {
   .s-free-content .o-table {
     margin: 4rem 0; } }
+
+/* ===========================================================
+# Home
+=========================================================== */
+@media only screen and (min-width: 800px) {
+  .t-home__about__col + .t-home__about__col {
+    margin-top: 1.7em; } }
+
+@media only screen and (min-width: 800px) {
+  .t-home__about__col {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 45%;
+    margin-left: 0%;
+    margin-right: 10%; }
+    .t-home__about__col:before, .t-home__about__col:after {
+      content: '';
+      display: table; }
+    .t-home__about__col:after {
+      clear: both; }
+    .t-home__about__col:last-child {
+      margin-right: 0%; } }
 
 /*# sourceMappingURL=ie.css.map */
