Add image mozaic to home

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -59,6 +59,7 @@
 //		'components/tile',
 //		'components/pagination',
 		'components/alert',
+		'components/image-mozaic',
 		'components/contact-details',
 		'components/tabs',
 		'components/sitemap';
