--- a/iCAN.Web/Views/Home.cshtml
+++ b/iCAN.Web/Views/Home.cshtml
@@ -23,9 +23,17 @@
 				<p>Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas sed diam eget risus varius blandit sit amet non magna. <a href="">Read more</a></p>
 			</div>
 			<div class="t-home__about__col">
+				@Html.Partial("~/Views/Partials/Components/ImageMozaic.cshtml", new ImageMozaicViewModel {
+					ImageFirst = Umbraco.TypedMedia(1175),
+					ImageSecond = Umbraco.TypedMedia(1174),
+					ModifierClass="t-home__about__col__images"
+				})
+
 				@Html.Partial("~/Views/Partials/Components/Quote.cshtml", new QuoteViewModel {
 					Quote = Html.Raw("Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio ac facilisis in."),
-					Source = "Authors name"
+					Source = "Authors name",
+					Title = "Title",
+					ModifierClass="t-home__about__col__quote"
 				})
 			</div>
 		</div>
